<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="hello">Hello World, Polling!</string>
	<string name="app_name">21st Century Polls</string>
	<string name="register">Register</string>
	<string name="login">Login</string>
	<string name="logout">Logout</string>
	<string name="loginText">Logged in as </string>
	<string name="password">Password</string>
	<string name="loginHint">Enter any email address</string>
	<string name="rememberDetails">Remember Details</string>
	<string name="logDetails">Only an email and password is required.
		If you wish to share demographic information to improve our results,
		please select Demographics under Menu.</string>
	<string name="economics">Economics</string>
	<string name="elections">Elections</string>
	<string name="politics">Politics</string>
	<string name="science">Science</string>
	<string name="finance">Finance</string>
	<string name="religion">Religion</string>
	<string name="military">Military</string>
	<string name="international">International</string>

	<string-array name="defaultAnswers">
		<item>Strongly Agree</item>
		<item>Agree</item>
		<item>No Opinion</item>
		<item>Disagree</item>
		<item>Strongly Disagree</item>
	</string-array>

	<string name="sA">Strongly Agree</string>
	<string name="A">Agree</string>
	<string name="D">Disagree</string>
	<string name="sD">Strongly Disagree</string>
	<string name="neutral">No Opinion</string>
	<string name="viewCharts">Charts</string>
	<string name="submit">Submit</string>
	<string name="reset">Reset</string>

	<string name="modify">Modify Tabs</string>
	<string name="demographics">Demographics</string>
	<string name="pleaseSelect">Select</string>
	<string name="party">Party</string>
	<string name="age">Age</string>
	<string name="sex">Sex</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="heritage">Heritage</string>
	<string name="background">Background</string>
	<string name="t">True</string>
	<string name="f">False</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="self">Self Employed</string>
	<string name="income">Income</string>
	<string name="marital">Marital</string>
	<string name="employment">Employment</string>
	<string name="education">Education</string>
	<string name="settings">Settings</string>

	<string name="spinnerPrompt">Select One:</string>


</resources>