<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:id="@+id/loginScrollView">
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:padding="5dp">

		<ImageView android:id="@+id/logoImageView"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:src="@drawable/logo" android:contentDescription="@string/app_name" 
			android:layout_gravity="center_horizontal"/>

		<TextView android:id="@+id/demoTextView"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/logDetails" android:gravity="center_horizontal|center" />

		<EditText android:id="@+id/emailEditText"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:hint="@string/loginHint" android:imeOptions="actionNext"
			android:inputType="textEmailAddress" android:padding="20dp" 
			android:singleLine="true" />

		<EditText android:id="@+id/passEditText"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:hint="@string/password" android:imeOptions="actionDone"
			android:inputType="textPassword" android:padding="20dp"
			android:singleLine="true" />



		
		
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:attr/dividerHorizontal"
    android:showDividers="middle"
    android:gravity="bottom">
				<TableRow android:id="@+id/rememberTableRow"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:id="@+id/rememberTextView"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/rememberDetails" android:layout_gravity="center" />

			<CheckBox android:id="@+id/rememberCheckBox"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:padding="20dp" 
				android:layout_weight="1"/></TableRow>


    <LinearLayout style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register" 
            android:id="@+id/registerButton"/>

        <Button style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login" 
            android:id="@+id/loginButton"/>
    </LinearLayout>
</LinearLayout>

	</TableLayout>
</ScrollView>