<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loggedInLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:padding="5dp">

		 <ImageView android:id="@+id/logoImageViewLoggedIn"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:src="@drawable/logo" android:contentDescription="@string/app_name" 
			android:layout_gravity="center_horizontal"/> 

		<TableRow
		    android:id="@+id/tableRow2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >

			<TextView
			    android:id="@+id/userTextView"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    style="@style/questionTableRow"
			    android:gravity="center_horizontal|center"
			    android:text="@string/loginText"
			    android:textAppearance="?android:attr/textAppearanceLarge" android:layout_weight="1" android:ellipsize="none" android:scrollHorizontally="true"/>

		</TableRow>
		
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:attr/dividerHorizontal"
    android:showDividers="middle"
    android:gravity="bottom">

        <Button
            android:id="@+id/tabsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify"
            style="?android:attr/buttonBarStyle"
            android:layout_gravity="center|bottom" />

    <LinearLayout style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout" 
            android:id="@+id/logoutButton"/>

        <Button style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/demographics" 
            android:id="@+id/demoButton"/>
    </LinearLayout>
</LinearLayout>
		


</LinearLayout>